# ga4ghtest/controllers/servers_controller.py
@@ -1,19 +1,19 @@
 import connexion
 import six
 
-from ga4ghtest.models import Endpoint  # noqa: E501
+from ga4ghtest.models import Server  # noqa: E501
 from ga4ghtest import util
-from ga4ghtest.core.controllers import endpoints_controller as controller
+from ga4ghtest.core.controllers import servers_controller as controller
 
 
-def get_endpoints(
+def get_servers(
     sort_by='created_at',
     order='desc',
     limit=3
 ):  # noqa: E501
-    """Get target endpoints
+    """Get target servers
 
-    Get the list of available endpoints.  # noqa: E501
+    Get the list of available servers.  # noqa: E501
 
     :param sort_by: logic by which to sort matched records
     :type sort_by: str
@@ -24,19 +24,19 @@ def get_endpoints(
 
     :rtype: str
     """
-    return controller.get_endpoints(
+    return controller.get_servers(
         sort_by=sort_by,
         order=order,
         limit=limit
     )
 
 
-def register_endpoint(
+def register_server(
     body
 ):  # noqa: E501
-    """Register an endpoint
+    """Register a server
 
-    Add an API server endpoint to the testbed. # noqa: E501
+    Add an API server to the testbed. # noqa: E501
 
     :param body: 
     :type body: dict | bytes
@@ -44,7 +44,7 @@ def register_endpoint(
     :rtype: str
     """
     if connexion.request.is_json:
-        body = Endpoint.from_dict(connexion.request.get_json())  # noqa: E501
-    return controller.register_endpoint(
+        body = Server.from_dict(connexion.request.get_json())  # noqa: E501
+    return controller.register_server(
         body=body
     )
