# ga4ghtest/controllers/tests_controller.py
@@ -1,6 +1,7 @@
 import connexion
 import six
 
+from ga4ghtest.models import ServiceTest  # noqa: E501
 from ga4ghtest import util
 from ga4ghtest.core.controllers import tests_controller as controller
 
@@ -13,10 +14,12 @@ def create_test(
     Create a new plugin run, either right now or with a schedule. # noqa: E501
 
     :param body: 
-    :type body: str
+    :type body: dict | bytes
 
     :rtype: str
     """
+    if connexion.request.is_json:
+        body = ServiceTest.from_dict(connexion.request.get_json())  # noqa: E501
     return controller.create_test(
         body=body
     )
@@ -32,7 +35,7 @@ def get_test_by_id(
     :param test_id: test ID
     :type test_id: str
 
-    :rtype: str
+    :rtype: ServiceTest
     """
     return controller.get_test_by_id(
         test_id=test_id
@@ -55,7 +58,7 @@ def get_tests(
     :param limit: maximum number of records to return
     :type limit: int
 
-    :rtype: str
+    :rtype: List[ServiceTest]
     """
     return controller.get_tests(
         sort_by=sort_by,
